Fixed landing page height on small screens.

--- a/src/css/LandingStyle.css
+++ b/src/css/LandingStyle.css
@@ -40,3 +40,9 @@
 #mo-money {
   padding-bottom: 15px;
 }
+
+@media (max-width: 768px) {
+    .landing-why{
+        min-height: 725px;
+    }
+}
